--- a/index.html
+++ b/index.html
@@ -1,11 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Website</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cool Site Name</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+  <style>
+    body { font-family: 'Poppins', sans-serif; background-color: #f5f5f5; }
+    .hero { background: linear-gradient(to right, #6b46c1, #805ad5); color: #fff; padding: 4rem 2rem; text-align: center; }
+    .product-item { background: #fff; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); padding: 2rem; text-align: center; transition: transform 0.3s ease; }
+    .product-item:hover { transform: translateY(-5px); }
+    .btn-primary { background-color: #6b46c1; border-color: #6b46c1; font-weight: 600; }
+    .btn-primary:hover { background-color: #805ad5; }
+    footer { background-color: #6b46c1; color: #fff; padding: 2rem; text-align: center; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is the homepage.</p>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+      <div class="container">
+        <a class="navbar-brand" href="#">E-Commerce</a>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Docs</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Your Orders</a></li>
+          <li class="nav-item"><a class="nav-link" id="cartLink" href="#">My Cart (0)</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h1>Name of the Site</h1>
+    <p>A market outside the reach of authoritarianism and tyrany</p>
+    <button class="btn btn-primary">Shop Now</button>
+  </section>
+
+  <section class="categories container py-5">
+    <h2 class="text-center mb-4">Shop by Category</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="category-item">
+          <h3>Categoy 1</h3>
+          <p>Explore the shit in category1</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="category-item">
+          <h3>Category 2</h3>
+          <p>Discover the shit in category2.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="category-item">
+          <h3>Category 3</h3>
+          <p>Find stuff in category3.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="featured-products container py-5">
+    <h2 class="text-center mb-4">Featured Products</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="product-item" id="Product_1">
+          <h3>Product 1</h3>
+          <p>Description: Cool thing</p>
+          <div class="price">$200</div>
+          <button class="btn btn-primary add-to-cart-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; FTP.</p>
+  </footer>
+
+  <script>
+    let cart = JSON.parse(localStorage.getItem('cart')) || [];
+    document.querySelectorAll('.add-to-cart-btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const productCard = btn.closest('.product-item');
+        const productId = productCard.id;
+        const productName = productCard.querySelector('h3').innerText;
+        const productPrice = productCard.querySelector('.price').innerText;
+        const productImage = productCard.querySelector('img').src;
+
+        const product = { id: productId, name: productName, price: productPrice, image: productImage };
+        const exists = cart.find(item => item.id === product.id);
+
+        if (!exists) {
+          cart.push(product);
+          localStorage.setItem('cart', JSON.stringify(cart));
+          alert(`${productName} added to cart!`);
+          updateCartCount();
+        } else {
+          alert(`${productName} is already in your cart.`);
+        }
+      });
+    });
+
+    function updateCartCount() {
+      const cartCount = cart.length;
+      const cartLink = document.querySelector('#cartLink');
+      if (cartLink) {
+        cartLink.innerText = `My Cart (${cartCount})`;
+      }
+    }
+    updateCartCount();
+  </script>
 </body>
 </html>   
